entrega 1 proyecto final Javascript

--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -19,13 +19,13 @@
                 <a href="../index.html">Home</a>
             </ol>
             <ol>
-                <a href="Productos.html">Productos </a>
+                <a href="Productos.html">Productos</a>
             </ol>
             <ol>
                 <a href="Contacto.html"> Contacto</a>
             </ol>
             <ol>
-                <a href="Ubicacion.html"> Ubicación </a>
+                <a href="Ubicacion.html"> Ubicación</a>
             </ol>
             <ol>
                 <a href="FAQ.html">FAQ</a>
@@ -63,6 +63,7 @@
     <img src="../imagenes/Logo Mila.jpg" alt="logo Mila" width="80" height="80">
 
 </footer>
-
+<script src="../script.js"></script>
 </body>
+
 </html>
